// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridTemplateRows renders 0 1`] = `
Array [
  .c0 {
  grid-template-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders function 1`] = `
Array [
  .c0 {
  grid-template-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-template-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders negative number 1`] = `
Array [
  .c0 {
  grid-template-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-template-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-template-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-rows: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-rows: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-template-rows: July;
  }
}

@media April {
  .c0 {
    grid-template-rows: August;
  }
}

@media January {
  .c0 {
    grid-template-rows: September;
  }
}

@media April {
  .c0 {
    grid-template-rows: November;
  }
}

@media June {
  .c0 {
    grid-template-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-template-rows: July;
  }
}

@media April {
  .c0 {
    grid-template-rows: August;
  }
}

@media January {
  .c0 {
    grid-template-rows: September;
  }
}

@media April {
  .c0 {
    grid-template-rows: November;
  }
}

@media June {
  .c0 {
    grid-template-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-rows: January;
  }
}

@media April {
  .c0 {
    grid-template-rows: December;
  }
}

@media January {
  .c0 {
    grid-template-rows: April;
  }
}

@media April {
  .c0 {
    grid-template-rows: May;
  }
}

@media June {
  .c0 {
    grid-template-rows: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-rows: January;
  }
}

@media April {
  .c0 {
    grid-template-rows: December;
  }
}

@media January {
  .c0 {
    grid-template-rows: April;
  }
}

@media April {
  .c0 {
    grid-template-rows: May;
  }
}

@media June {
  .c0 {
    grid-template-rows: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders postitive number 1`] = `
Array [
  .c0 {
  grid-template-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders string 1`] = `
Array [
  .c0 {
  grid-template-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateRows renders valid theme path 1`] = `
Array [
  .c0 {
  grid-template-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
